# paper-audit

./: .gitignore  paper-audit-HANDOVER.md  pyproject.toml
fixtures/: toy_paper.md  toy_question.yaml
src/paper_audit/: cli.py  config.py  guard.py  schemas.py  score.py  store.py  usage.py
src/paper_audit/backends/: base.py  cli_backend.py  fake.py  sdk_backend.py
src/paper_audit/pipeline/: _common.py  analyst.py  quote_check.py  synthesize.py  verifier.py
src/paper_audit/prompts/: analyst.md  entailment_verifier.md
tests/: test_guard.py  test_pipeline_fake.py  test_quote_check.py  test_schemas.py
