[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-audit"
version = "0.0.1"
description = "Epistemically auditable multi-agent scientific paper audit pipeline"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
paper-audit = "paper_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paper_audit = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
